--- a/Ubuntu.html
+++ b/Ubuntu.html
@@ -111,7 +111,14 @@
 			node -v </br>
 			npm -v </br>
 		</div>
-		</br></br>
+
+		<h3 id="is8">Issue 8: How to unzip archive</h3>
+		<div>
+			//Firstly, if you don't have unzip, you'll need to install it</br>
+			sudo apt-get install unzip</br>
+			//Then you need to unzip archive</br>
+			unzip
+		</div>
 	  </div>
 	</div>
 
