--- a/ubuntu.html
+++ b/ubuntu.html
@@ -45,6 +45,18 @@
 			program_name --help
 		</div>
 
+		<h3 id="isredirect">How to redirect the output to the file</h3>
+		<div>
+			ls -la > output.txt  //replaces content of a file</br>
+			ls -la >> output.txt //appends to the end of a file</br>
+		</div>
+
+		<h3 id="ispipes">About pipes</h3>
+		<div>
+			ls -la | head -n 3               //outputs first 3 lines</br>
+			ls -la | head -n 3 > output.txt  //writes first 3 lines to the file</br>
+		</div>
+
         <h3 id="is2">How to manipulate files</h3>
 		<div>
 			<ul>
@@ -91,7 +103,7 @@
 			//Install unzip program</br>
 			sudo apt-get install unzip</br>
 			//Archive 3 files</br>
-			zip archivefile1 doc1 doc2 doc3
+			zip archivefile1.zip doc1 doc2 doc3
 		</div>
 
 		<h3 id="is3">How to connect to the server via ssh</h3>
@@ -152,6 +164,13 @@
 
 		<h3 id="is7">How to install and configure Nginx</h3>
 		<div>
+			Nginx stores its configuration files within the "/etc/nginx" directory.</br>
+
+
+			Directory /etc/nginx/sites-available/ contains configuration files for each site</br>
+
+			Create /etc/nginx/sites-available and /etc/nginx/sites-enabled and then edit the http block inside /etc/nginx/nginx.conf and add this line</br>
+
 			sudo apt-get install nginx</br>
 			sudo mkdir -p /var/www/news/public_html</br>
 			sudo chown -R andrew:andrew /var/www/news/public_html</br>
