MongoDb description was added

--- a/windows.html
+++ b/windows.html
@@ -46,7 +46,9 @@
 			1. Open <a href="http://www.mongodb.org/downloads">MongoDb downloads page</a> and download Windows x64 version</br>
 			2. Then install MongoDb to C:\MongoDb\ by custom installation (all components)</br>
 			3. Run cmd and type "md \data\db" (this creates default directory \data\db; alternatively you can use C:\mongodb\bin\mongod.exe --dbpath "d:\test\mongo db data")</br>
-			4. run C:\mongodb\bin\mongod.exe</br>
+			4. run C:\mongodb\bin\mongod.exe (this starts mongo's main program)</br>
+			5. run C:\mongodb\bin\mongo.exe (if you like console)</br>
+			6. install Robomongo from <a href="http://robomongo.org/download.html">here (if you like applications)</a> 
 			</br>
 		</div>
 	  </div>
