--- a/ubuntu.html
+++ b/ubuntu.html
@@ -39,6 +39,13 @@
 			program_name --help
 		</div>
 
+		<h3 id="is_terminal">How to work with terminal</h3>
+		<div>
+			Ctrl + C //interrupts program
+			Ctrl + L //clears screen
+			sudo shutdown -r now//restarts the system
+		</div>
+
 		<h3 id="isredirect">How to redirect the output to the file</h3>
 		<div>
 			ls -la > output.txt  //replaces content of a file</br>
