Modal verbs were added

--- a/english.html
+++ b/english.html
@@ -33,6 +33,9 @@
         <h2>English blog</h2>
         </br>
 
+		<h4>25.08.2014 Modal verbs</h4>
+        <a type="button" class="btn btn-info" href="http://usefulenglish.ru/grammar/modal-verbs-introduction" class="btn btn-default btn-lg" role="button">Modal verbs: Introduction</a></br>
+        </br>  
 
         <h4>20.08.2014 American English vs British English</h4>
         <a type="button" class="btn btn-info" href="http://www.diffen.com/difference/American_English_vs_British_English" class="btn btn-default btn-lg" role="button">The first article</a></br>
