English was refactored

--- a/english2.html
+++ b/english2.html
@@ -25,46 +25,40 @@
 <script src="./bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 <script>
 	$(document).ready(function(){
-		createMenu("windows.html");
+		createMenu("english.html");
 	});
 </script>
   <body>
     <div class="container">
       <div class="starter-template">
-      <h2>Windows</h2>
+      <h2>English</h2>
         </br>
 
-        <h3 id="is_change_drive">How to change drive</h3>
-		<div>
-			cd /d letter: (for example cd /d d:)
+
+        <h3 id="is_conditional_sentences">Conditional sentences</h3>
+		<div style="text-align: center;">
+			<img src="english/conditionals/conditionals_gendalf.jpeg" width="500" />
+			<img src="english/conditionals/conditionals_main.jpg" width="900" />
+			<img src="english/conditionals/conditionals_1.jpg" width="900" />
+			<img src="english/conditionals/conditionals_2.jpg" width="900" />
+			<img src="english/conditionals/conditionals_3.jpg" width="900" />
+			<img src="english/conditionals/conditionals_4.gif" width="900" />
 		</div>
 
-        <h3 id="is_putty">How to change PuTTY settings</h3>
+        <h3 id="is_active_passive_tenses">Active and passive tenses</h3>
 		<div>
-			1. Download PuTTY from <a href="http://www.chiark.greenend.org.uk/~sgtatham/putty/download.html">Downloads page</a> and copy it to C:\Program Files x86\Putty\</br>
-			1. Window > Appearance, choose ClearType and Lucida Console font, 12-point.</br>
-			2. Window > Colours and select ANSI Blue in the Select a colour to adjust to Red:74 Green:74 Blue:255 and do the same for ANSI Blue Bold to Red:140 Green:140 Blue:255.
+			<img src="english/active_passive_rules.jpg" width="800" />
+			
 		</div>
 
-		<h3 id="ismongodb">How to install and configure MongoDb</h3>
+        <h3 id="is_active_passive_examples">Active and passive examples</h3>
 		<div>
-			1. Open <a href="http://www.mongodb.org/downloads">MongoDb downloads page</a> and download Windows x64 version</br>
-			2. Then install MongoDb to C:\MongoDb\ by custom installation (all components)</br>
-			3. Run cmd and type "md \data\db" (this creates default directory \data\db; alternatively you can use C:\mongodb\bin\mongod.exe --dbpath "d:\test\mongo db data")</br>
-			4. run C:\mongodb\bin\mongod.exe (this starts mongo's main program)</br>
-			5. run C:\mongodb\bin\mongo.exe (if you like console)</br>
-			6. install Robomongo from <a href="http://robomongo.org/download.html">here</a>(if you like applications)</br>
+			<img src="english/active_passive_examples.jpg" width="800" />
 		</div>
 
-		<h3 id="ismongodb">How to install and configure maven</h3>
+        <h3 id="is_all_active_tenses">All active tenses</h3>
 		<div>
-			1. Open <a href="http://maven.apache.org/download.cgi">Maven downloads page</a> and download binary zip.</br>
-			2. Extract apache-maven***.zip to c:\maven directory.</br>
-			3. Open "Environmaent variables" and set JAVA_HOME to "C:\Program Files\Java\jdk1.7.0_67" (or your java version).</br>
-			4. Open "Environmaent variables" and set MAVEN_HOME to "C:\maven".</br>
-			5. To run maven from command prompt, it is necessary to update the PATH variable with Maven’s installation bin directory. Just Open "Environmaent variables" and append to PATH variable value "C:\maven\bin" (don't forget semicolon before value).</br>
-			6. Check that all installed correctly "mvn -version"</br>
-			7. To create jar type "mvn package" in directory where your pom.xml are located.
+			<img src="english/tenses.jpg"/>
 		</div>
 	  </div>
 	</div>
