--- a/english.html
+++ b/english.html
@@ -23,7 +23,7 @@
 </style>
 <script>
 	$(document).ready(function(){
-		createMenu("english.html");
+		createMenu("index.html");
 	});
 </script>
 <body>
