There are more colors

--- a/index.html
+++ b/index.html
@@ -34,28 +34,42 @@
       <h2>English</h2>
         </br>
 
+        <h3 id="is_all_tenses">1. All tenses</h3>
+		<div>
+			<img src="english/01. All tenses.jpg"/>
+		</div>
 
-        <h3 id="is_conditional_sentences">Conditional sentences</h3>
+        <h3 id="is_active_passive_voices">2. Active and passive voices</h3>
+		<div>
+			<img src="english/021. Active and passive rules.jpg" width="800" />		
+			<img src="english/022. Active and passive examples 1.jpg" width="800" />
+			<img src="english/023. Active and passive examples 2.jpg" width="800" />
+		</div>
+
+        <h3 id="is_conditional_sentences">3. Conditional sentences</h3>
 		<div style="text-align: center;">
-			<img src="english/conditionals/conditionals_gendalf.jpeg" width="500" />
-			<img src="english/conditionals/conditionals_main.jpg" width="900" />
-			<img src="english/conditionals/conditionals_1.jpg" width="900" />
+			<img src="english/031. Conditionals 0.jpg" width="900" />
+			<img src="english/032. Conditionals 1.jpg" width="900" />
+			<img src="english/033. Conditionals 2.jpg" width="900" />
+			<img src="english/034. Conditionals 3.jpg" width="900" />
+			<img src="english/035. Conditionals review.jpg" width="900" />
+			<img src="english/036. Conditionals all.jpg" width="900" />
 		</div>
 
-        <h3 id="is_active_passive_tenses">Active and passive tenses</h3>
-		<div>
-			<img src="english/active_passive_rules.jpg" width="800" />
-			
+		<h3 id="is_prepositions_of_place">4. Prepositions of place</h3>
+		<div style="text-align: center;">
+			<img src="english/041. Prepositions of place.jpg" width="900" />
 		</div>
 
-        <h3 id="is_active_passive_examples">Active and passive examples</h3>
-		<div>
-			<img src="english/active_passive_examples.jpg" width="800" />
+		<h3 id="is_prepositions_of_time">5. Prepositions of time</h3>
+		<div style="text-align: center;">
+			<img src="english/051. Prepositions of time.jpg" width="900" />
 		</div>
 
-        <h3 id="is_all_active_tenses">All active tenses</h3>
-		<div>
-			<img src="english/tenses.jpg"/>
+		<h3 id="is_modal_verbs">6. Modal verbs</h3>
+		<div style="text-align: center;">
+			<img src="english/061. Modal verbs rules.jpg" width="900" />
+			<img src="english/062. Modal verbs examples.jpg" width="900" />
 		</div>
 	  </div>
 	</div>
