Passive voice game was added

--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
 			<img src="english/021. Active and passive rules.jpg" width="800" />		
 			<img src="english/022. Active and passive examples 1.jpg" width="800" />
 			<img src="english/023. Active and passive examples 2.jpg" width="800" />
+			<img src="english/024. Active voice game.jpg" width="800" />
+			<img src="english/025. Passive voice game.jpg" width="800" />
 		</div>
 
         <h3 id="is_conditional_sentences">3. Conditional sentences</h3>
