Lighttable's description installation was added

--- a/windows.html
+++ b/windows.html
@@ -66,6 +66,14 @@
 			6. Check that all installed correctly "mvn -version"</br>
 			7. To create jar type "mvn package" in directory where your pom.xml are located.
 		</div>
+
+		<h3 id="is_light_table_conf">How to install and configure Light Table</h3>
+		<div>
+			1. Open <a href="http://leiningen-win-installer.djpowell.net/">Leiningen's page</a>, download an installer and install it to c:\.lein. When you have installed Leiningen you can run repl console with cmd.exe. Just type 'lein repl'.</br> 
+			2. Open <a href="http://www.lighttable.com/">Light table's page</a> and download binary zip.</br>
+			3. Extract the zip archive to c:\lighttable directory.</br>
+			4. Open "Environmaent variables" and append to PATH to "C:\Program Files\Java\jdk1.7.0_67\bin" (or where your javac file is located).</br>
+		</div>
 	  </div>
 	</div>
 
