Description of tmux was added

--- a/ubuntu.html
+++ b/ubuntu.html
@@ -207,6 +207,30 @@
 			//Then you need to unzip archive</br>
 			unzip
 		</div>
+
+		<h3 id="is_tmux">How to use tmux</h3>
+		<div>
+			//Start of tmux</br>
+			tmux</br>
+
+			Several windows:</br>
+			//Create new window</br>
+			Ctrl+b c</br>
+			//Go to window #</br>
+			Ctrl+b 0...9</br>
+			//Close the window</br>
+			exit</br>
+
+			Several panels:</br>
+			//split the panel vertically</br>
+			Ctrl+b %</br>
+			//split the panel horizontally</br>
+			Ctrl+b "</br>
+			//switch among panels</br>
+			Ctrl+b →←↑↓</br> 
+			//Close the panel</br>
+			exit</br>
+		</div>
 	  </div>
 	</div>
 
