Typos were fixed

--- a/ubuntu.html
+++ b/ubuntu.html
@@ -41,9 +41,9 @@
 
 		<h3 id="is_terminal">How to work with terminal</h3>
 		<div>
-			Ctrl + C //interrupts program
-			Ctrl + L //clears screen
-			sudo shutdown -r now//restarts the system
+			Ctrl + C //interrupts program</br>
+			Ctrl + L //clears screen</br>
+			sudo shutdown -r now//restarts the system</br>
 		</div>
 
 		<h3 id="isredirect">How to redirect the output to the file</h3>
