Description of grep was added

--- a/ubuntu.html
+++ b/ubuntu.html
@@ -231,6 +231,12 @@
 			//Close the panel</br>
 			exit</br>
 		</div>
+
+		<h3 id="is_grep">How to use grep</h3>
+		<div>
+			//Search all files containing "Welcome to nginx" string</br>
+			grep -r "Welcome to nginx"</br>
+		</div>
 	  </div>
 	</div>
 
