--- a/ubuntu.html
+++ b/ubuntu.html
@@ -237,6 +237,12 @@
 			//Search all files containing "Welcome to nginx" string</br>
 			grep -r "Welcome to nginx"</br>
 		</div>
+
+		<h3 id="is_find">How to use find</h3>
+		<div>
+			//Search all files with a name libjsig.so in a catalog called Library</br>
+			sudo find /Library -regex ".*libjsig\.so"</br>
+		</div>
 	  </div>
 	</div>
 
