Vim commands were added

--- a/ubuntu.html
+++ b/ubuntu.html
@@ -243,6 +243,21 @@
 			//Search all files with a name libjsig.so in a catalog called Library</br>
 			sudo find /Library -regex ".*libjsig\.so"</br>
 		</div>
+
+		<h3 id="is_vim">
+			<div>
+				hjkl - cursor movements <br>
+				i - edit mode
+				Esc - exit from edit mode
+				x - delete current symbol
+				dw - delete current word
+				de - delete suffix of word
+				dd - delete row
+				u - redo
+				p - insert deleted text
+				ctrl+R - cancels redo
+				r then a symbol - replaces a symbol
+			</div>
 	  </div>
 	</div>
 
