--- a/ubuntu.html
+++ b/ubuntu.html
@@ -244,7 +244,7 @@
 			sudo find /Library -regex ".*libjsig\.so"</br>
 		</div>
 
-		<h3 id="is_vim">
+		<h3 id="is_vim">Usage of Vim</h3>
 			<div>
 				hjkl - cursor movements <br>
 				i - edit mode
