--- a/ubuntu.html
+++ b/ubuntu.html
@@ -247,16 +247,16 @@
 		<h3 id="is_vim">Usage of Vim</h3>
 			<div>
 				hjkl - cursor movements <br>
-				i - edit mode
-				Esc - exit from edit mode
-				x - delete current symbol
-				dw - delete current word
-				de - delete suffix of word
-				dd - delete row
-				u - redo
-				p - insert deleted text
-				ctrl+R - cancels redo
-				r then a symbol - replaces a symbol
+				i - edit mode<br>
+				Esc - exit from edit mode<br>
+				x - delete current symbol<br>
+				dw - delete current word<br>
+				de - delete suffix of word<br>
+				dd - delete row<br>
+				u - redo<br>
+				p - insert deleted text<br>
+				ctrl+R - cancels redo<br>
+				r then a symbol - replaces a symbol<br>
 			</div>
 	  </div>
 	</div>
