--- a/ubuntu.html
+++ b/ubuntu.html
@@ -262,7 +262,7 @@
 		</div>
 		<h3 id="is_upstart">How to use upstart</h3>
 		<div>
-			You must create servicename.conf file in /etc/init
+			You must create servicename.conf file in /etc/init</br>
 			description "Your description"</br>
 			author "abtv"</br></br>
 
