--- a/index.html
+++ b/index.html
@@ -1,113 +1,13 @@
-<!DOCTYPE html>
 <html>
   <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-	<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
-	<link rel="icon" 
-      type="image/png" 
-      href="icon.png">
-    <script src="./javascripts/jquery-2.1.1.min.js"></script>
-    <script src="./javascripts/main.js"></script>
+      <meta charset="utf-8">
+      <link href="css/bootstrap.min.css" rel="stylesheet">
+      <title>News</title>
   </head>
-  <style>
-  .starter-template {
-  	padding-top: 40px;
-  	padding-bottom: 40px;
-  padding-left: 120px;
-  max-width: 75%;
-  text-align: justify;}
-  .linkbutton{
-  	min-width: 350px; margin: 1px;
-  }
-</style>
-<script src="./javascripts/menu.js"></script>
-<script src="./bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-<script>
-	$(document).ready(function(){
-		createMenu("index.html");
-	});
-</script>
   <body>
     <div class="container">
-      <div class="starter-template">
-      <h2>English</h2>
-        </br>
-
-        <h3 id="is_all_tenses">1. All tenses</h3>
-		<div>
-			<img src="english/01. All tenses.jpg"/>
-		</div>
-
-        <h3 id="is_active_passive_voices">2. Active and passive voices</h3>
-		<div>
-			<img src="english/021. Active and passive rules.jpg" width="800" />		
-			<img src="english/022. Active and passive examples 1.jpg" width="800" />
-			<img src="english/023. Active and passive examples 2.jpg" width="800" />
-			<img src="english/024. Active voice game.jpg" width="800" />
-			<img src="english/025. Passive voice game.jpg" width="800" />
-		</div>
-
-        <h3 id="is_conditional_sentences">3. Conditional sentences</h3>
-		<div style="text-align: center;">
-			<img src="english/031. Conditionals 0.jpg" width="900" />
-			<img src="english/032. Conditionals 1.jpg" width="900" />
-			<img src="english/033. Conditionals 2.jpg" width="900" />
-			<img src="english/034. Conditionals 3.jpg" width="900" />
-			<img src="english/035. Conditionals review.jpg" width="900" />
-			<img src="english/036. Conditionals all.jpg" width="900" />
-		</div>
-
-		<h3 id="is_prepositions_of_place">4. Prepositions of place</h3>
-		<div style="text-align: center;">
-			<img src="english/041. Prepositions of place.jpg" width="900" />
-		</div>
-
-		<h3 id="is_prepositions_of_time">5. Prepositions of time</h3>
-		<div style="text-align: center;">
-			<img src="english/051. Prepositions of time.jpg" width="900" />
-		</div>
-
-		<h3 id="is_modal_verbs">6. Modal verbs</h3>
-		<div style="text-align: center;">
-			<img src="english/061. Modal verbs rules.jpg" width="900" />
-			<img src="english/062. Modal verbs examples.jpg" width="900" />
-		</div>
-	  </div>
-	</div>
-
-
-	<!-- Yandex.Metrika informer -->
-	<a href="https://metrika.yandex.ru/stat/?id=25630463&amp;from=informer"
-	target="_blank" rel="nofollow"><img src="//bs.yandex.ru/informer/25630463/3_0_3EB0FFFF_1E90FFFF_0_pageviews"
-	style="width:88px; height:31px; border:0;" alt="Яндекс.Метрика" title="Яндекс.Метрика: данные за сегодня (просмотры, визиты и уникальные посетители)" onclick="try{Ya.Metrika.informer({i:this,id:25630463,lang:'ru'});return false}catch(e){}"/></a>
-	<!-- /Yandex.Metrika informer -->
-
-	<!-- Yandex.Metrika counter -->
-	<script type="text/javascript">
-	(function (d, w, c) {
-	    (w[c] = w[c] || []).push(function() {
-	        try {
-	            w.yaCounter25630463 = new Ya.Metrika({id:25630463,
-	                    clickmap:true,
-	                    trackLinks:true,
-	                    accurateTrackBounce:true});
-	        } catch(e) { }
-	    });
-
-	    var n = d.getElementsByTagName("script")[0],
-	        s = d.createElement("script"),
-	        f = function () { n.parentNode.insertBefore(s, n); };
-	    s.type = "text/javascript";
-	    s.async = true;
-	    s.src = (d.location.protocol == "https:" ? "https:" : "http:") + "//mc.yandex.ru/metrika/watch.js";
-
-	    if (w.opera == "[object Opera]") {
-	        d.addEventListener("DOMContentLoaded", f, false);
-	    } else { f(); }
-	})(document, window, "yandex_metrika_callbacks");
-	</script>
-	<noscript><div><img src="//mc.yandex.ru/watch/25630463" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-	<!-- /Yandex.Metrika counter -->
+        <div id="app"></div>
+    </div>
+    <script src="js/app.js" type="text/javascript"></script>
   </body>
 </html>
