meta tag was added

--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
+    <meta name="google-site-verification" content="FIm7mHLigRo6A6a-ZBow4X6oJeeCTQPRuvrf-P6Md40" />
     <title>abtv's blog</title>
-    <link href="css/bootstrap.min.css" rel="stylesheet">    
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=PT+Serif:400,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
     <link href="css/site.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
