--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <html>
   <head>
     <meta charset="utf-8" />
@@ -10,9 +9,7 @@
     <link href="css/site.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <div class="container">
-      <div id="app"></div>
-    </div>
+    <div class="container" id="app"></div>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -23,5 +20,7 @@
       ga('send', 'pageview');
     </script>
     <script src="js/app.js" type="text/javascript"></script>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
