--- a/index.html
+++ b/index.html
@@ -9,7 +9,19 @@
     <link href="css/site.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <div class="container" id="app"></div>
+    <div id="app">
+      <div class="outer">
+        <div class="middle">
+          <div class="inner">
+            <h4>Loading. Please, wait...</h4>
+            <div class="sk-chasing-dots">
+                    <div class="sk-child sk-dot1"></div>
+                    <div class="sk-child sk-dot2"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
