--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <div class="middle">
           <div class="inner">
             <h4>Loading. Please, wait...</h4>
+            <h4>Идет загрузка. Пожалуйста, подождите...</h4>
             <div class="sk-chasing-dots">
                     <div class="sk-child sk-dot1"></div>
                     <div class="sk-child sk-dot2"></div>
