--- a/index.html
+++ b/index.html
@@ -1,39 +1,234 @@
-<html>
+<!doctype html>
+<html class="no-js" lang="">
+
   <head>
-    <meta charset="utf-8" />
-    <meta content="width=device-width, initial-scale=1" name="viewport" />
-    <meta name="google-site-verification" content="FIm7mHLigRo6A6a-ZBow4X6oJeeCTQPRuvrf-P6Md40" />
-    <title>abtv's blog</title>
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href='https://fonts.googleapis.com/css?family=PT+Serif:400,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
-    <link href="css/site.css" rel="stylesheet" type="text/css" />
+    <meta charset="utf-8">
+    <title></title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="apple-touch-icon" href="icon.png">
+    <!-- Place favicon.ico in the root directory -->
+    <style>
+      body, html {
+        font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+        font-size:14px;
+      }
+
+      .app {
+        padding: 4px;
+        text-align: center;
+      }
+
+      .search-panel {
+        margin-bottom: 10px;
+      }
+
+      .results-panel {
+        text-align: center;
+        display: inline-block;
+      }
+
+      .search-input {
+        max-width: 400px;
+      }
+
+      .search-result-row {
+        padding: 10px;
+      }
+
+      .search-result-url {
+        text-align: left;
+      }
+
+      .search-result-comment {
+        text-align: justify;
+        margin-bottom: 2px;
+      }
+
+      .search-result-tags {
+        margin-top: 6px;
+        text-align: left;
+      }
+
+      .search-result-tag {
+        margin: 2px;
+        border-radius: 8px;
+        background: #DDDDDD;
+        padding: 4px;
+        cursor: pointer;
+      }
+    </style>
+
   </head>
+
   <body>
-    <div id="app">
-      <div class="outer">
-        <div class="middle">
-          <div class="inner">
-            <h4>Loading. Please, wait...</h4>
-            <h4>Идет загрузка. Пожалуйста, подождите...</h4>
-            <div class="sk-chasing-dots">
-                    <div class="sk-child sk-dot1"></div>
-                    <div class="sk-child sk-dot2"></div>
-            </div>
-          </div>
-        </div>
+    <div class="app">
+      <h3>
+        Useful links
+      </h3>
+      <div class="search-panel">
+        <label for="search-input">Search</label>
+        <input id="search-input"
+               type="text"
+               class="search-input"
+               placeholder="Start typing to search..."
+               oninput="onSearchInputChanged()"
+        />
+      </div>
+      <div id="results-panel"
+           class="results-panel">
       </div>
     </div>
     <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+      const searchInput = document.getElementById("search-input")
+      const resultsPanel = document.getElementById("results-panel")
+      let text = ""
+      const links = createLinks()
+      redraw(links)
 
-      ga('create', 'UA-68667703-1', 'auto');
-      ga('send', 'pageview');
+      function onSearchInputChanged(arg) {
+        const { value: newText } = searchInput
+        if (text === newText ) {
+          return
+        }
+        text = newText
+        redraw(search(text))
+      }
+
+      function search(text) {
+        const words = getWords(text)
+        return links.filter(link => hasWords({ link, words }))
+
+        function getWords(text) {
+          const wordPattern = /\w+/g
+          const words = text.toLowerCase().match(wordPattern) || []
+          return words.map(word => word.toLowerCase())
+        }
+
+        function hasWords({ link, words }) {
+          const name = link.name.toLowerCase()
+          const comment = link.comment.toLowerCase()
+          const tags = link.tags.map(tag => tag.toLowerCase())
+          return words.every(hasWord)
+
+          function hasWord(word) {
+            return name.includes(word) || comment.includes(word) || tags.some(tag => tag.includes(word))
+          }
+        }
+      }
+
+      function redraw(links) {
+        if (links.length === 0) {
+          resultsPanel.innerHTML = `<div>No relevant links.</div>`
+          return
+        }
+        const elements = links.map(link => createElement(link))
+        resultsPanel.innerHTML = `<div>${elements.join("")}</div>`
+
+        function createElement({ name, url, comment, tags }) {
+          const tagElements = tags.filter(tag => tag)
+            .map(tag => `<span class="search-result-tag" onclick="setSearchText(this.innerText)">${tag}</span>`)
+          return `<div class="search-result-row">
+<div class="search-result-url"><a href="${url}" target="_blank">${name || ""}</a></div>
+<div class="search-result-comment">${comment || ""}</div>
+<div class="search-result-tags">${tagElements.join("")}</div>
+</div>`
+        }
+      }
+
+      function setSearchText(text) {
+        if (searchInput.value === text) {
+          searchInput.value = ""
+        } else {
+          searchInput.value = text
+        }
+        onSearchInputChanged()
+      }
+
+      function createLinks() {
+        return [{
+          name: "Authentication in SPA (ReactJS and VueJS) the right way",
+          comment: "",
+          url: "https://medium.com/@jcbaey/authentication-in-spa-reactjs-and-vuejs-the-right-way-e4a9ac5cd9a3",
+          tags: ["advanced", "security", "http", "cookie"]
+        }, {
+          name: "HTTP 1.1 protocol (RFC 7230)",
+          comment: "",
+          url: "https://tools.ietf.org/html/rfc7230",
+          tags: ["advanced", "http"]
+        }, {
+          name: "HTTP State Management Mechanism (RFC 6265)",
+          comment: "",
+          url: "https://tools.ietf.org/html/rfc6265",
+          tags: ["advanced", "http", "cookie"]
+        }, {
+          name: "SameSite cookies explained",
+          comment: "Learn the difference between None, Lax and Strict values.",
+          url: "https://web.dev/samesite-cookies-explained",
+          tags: ["advanced", "security", "http", "cookie"]
+        }, {
+          name: "SameSite",
+          comment: "SameSite values succinctly.",
+          url: "https://www.owasp.org/index.php/SameSite",
+          tags: ["advanced", "security", "http", "cookie"]
+        }, {
+          name: "thoughtbot's Git Flow",
+          comment: "A useful Git flow model.",
+          url: "https://thoughtbot.com/upcase/videos/git-thoughtbot-git-flow",
+          tags: ["advanced", "git"]
+        }, {
+          name: "Что такое DNS",
+          comment: "",
+          url: "https://guides.hexlet.io/dns",
+          tags: ["advanced", "dns"]
+        }, {
+          name: "Архитектура и ООП",
+          comment: "Основы дизайна.",
+          url: "https://ru.hexlet.io/blog/posts/arhitektura-i-oop",
+          tags: ["medium", "design"]
+        }, {
+          name: "Что такое MVC: рассказываем простыми словами",
+          comment: "Основы дизайна.",
+          url: "https://ru.hexlet.io/blog/posts/chto-takoe-mvc-rasskazyvaem-prostymi-slovami",
+          tags: ["medium", "design"]
+        }, {
+          name: "Clean Code concepts adapted for JavaScript",
+          comment: "Основы написания поддерживаемого кода.",
+          url: "https://github.com/ryanmcdermott/clean-code-javascript",
+          tags: ["medium", "clean code"]
+        }, {
+          name: "Совершенный код: Проектирование функций",
+          comment: "Основы написания поддерживаемого кода.",
+          url: "https://ru.hexlet.io/blog/posts/sovershennyy-kod-proektirovanie-funktsiy",
+          tags: ["medium", "clean code"]
+        }, {
+          name: "Изучите необходимый минимум Linux, чтобы быть продуктивным",
+          comment: "",
+          url: "https://ru.hexlet.io/blog/posts/basic-linux-productivity",
+          tags: ["medium", "linux"]
+        }, {
+          name: "Как научиться слепой печати",
+          comment: "",
+          url: "https://guides.hexlet.io/typing",
+          tags: ["medium"]
+        }, {
+          name: "Что такое SSH",
+          comment: "Прочитай статью, если тебе нужно зайти на сервер с Linux.",
+          url: "https://guides.hexlet.io/ssh",
+          tags: ["basics", "security", "linux"]
+        }, {
+          name: "An introduction to Git: what it is, and how to use it",
+          comment: "Read it if you've never used Git before.",
+          url: "https://www.freecodecamp.org/news/what-is-git-and-how-to-use-it-c341b049ae61",
+          tags: ["basics", "git"]
+        }, {
+          name: "Git Feature Branch Workflow",
+          comment: "Explains what feature branch and pull request is.",
+          url: "https://www.atlassian.com/git/tutorials/comparing-workflows/feature-branch-workflow",
+          tags: ["basics", "git"]
+        }]
+      }
     </script>
-    <script src="js/app.js" type="text/javascript"></script>
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
