Added Inspiration section

--- a/index.html
+++ b/index.html
@@ -88,6 +88,16 @@
         </div>
       </div>
       
+      <div class="block">
+        <div class="block-title">
+          <a href="https://www.thoughtworks.com/radar" target="_blank">ThoughtWorks</a>,
+          <a href="https://thoughtbot.com/blog" target="_blank">ThoughtBot</a>,
+          <a href="https://m.signalvnoise.com" target="_blank">BaseCamp</a>
+        </div>
+        <div class="block-subtitle">
+          Inspiration
+        </div>
+      </div>
     </div>
   </section>
 
