Apr 2021 update: add new tools, keep only the most important books

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
       <div class="block">
         <div class="block-title">
-          Workflowy, Slack
+          Focus To-Do, Workflowy, Slack
         </div>
         <div class="block-subtitle">
           Productivity
@@ -65,7 +65,7 @@
 
       <div class="block">
         <div class="block-title">
-          Emacs, Tmux, Alacritty, Git
+          WebStorm, Tmux, Alacritty, Git
         </div>
         <div class="block-subtitle">
           Development
@@ -74,7 +74,7 @@
       
       <div class="block">
         <div class="block-title">
-          Node.js, GraphQL, Redis, Postgres, AWS
+          Node.js, Nest.js, Redis, Postgres, AWS
         </div>
         <div class="block-subtitle">
           Backend
@@ -139,16 +139,6 @@
 
       <div class="block">
         <div class="block-title">
-          <a href="https://www.amazon.com/Practical-Vim-Thought-Pragmatic-Programmers/dp/1934356980"
-             target="_blank">Practical Vim by Drew Neil</a>
-        </div>
-        <div class="block-subtitle">
-          Tools: Vim basics
-        </div>
-      </div>
-
-      <div class="block">
-        <div class="block-title">
           <a href="https://www.amazon.com/Peopleware-Productive-Projects-Tom-DeMarco/dp/0932633439"
              target="_blank">Peopleware: Productive Projects and Teams by Tom DeMarco, Timothy Lister</a>
         </div>
@@ -164,16 +154,6 @@
         </div>
         <div class="block-subtitle">
           People: lessons learned on building a huge project
-        </div>
-      </div>
-
-      <div class="block">
-        <div class="block-title">
-          <a href="https://www.amazon.com/How-Would-Move-Mount-Fuji-ebook/dp/B000Q67H6I"
-             target="_blank">How Would You Move Mount Fuji?: Microsoft's Cult of the Puzzle - How the World's Smartest Companies Select the Most Creative Thinkers by William Poundstone</a>
-        </div>
-        <div class="block-subtitle">
-          People: lessons learned on hiring creative people
         </div>
       </div>
 
