Add programming languages and what I do

--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
       </div>
 
       <div id="jobtitle" class="sub-title">
-        Lead software engineer
+        What I do:
+        <ul>
+          <li>helping my team to grow</li>
+          <li>designing application architecture</li>
+          <li>developing backend</li>
+          <li>developing simple frontend</li>
+        </ul>
       </div>
     </div>
     <div id="contact" class="contact">
@@ -53,6 +59,14 @@
       My tools
     </div>
     <div class="section-content">
+      <div class="block">
+        <div class="block-title">
+          JavaScript, TypeScript
+        </div>
+        <div class="block-subtitle">
+          Programming languages
+        </div>
+      </div>
 
       <div class="block">
         <div class="block-title">
@@ -74,7 +88,7 @@
       
       <div class="block">
         <div class="block-title">
-          Node.js, Nest.js, Redis, Postgres, AWS
+          Node.js/Nest.js, Redis, Postgres, AWS
         </div>
         <div class="block-subtitle">
           Backend
@@ -83,7 +97,7 @@
       
       <div class="block">
         <div class="block-title">
-          Vue.js, Nuxt.js, Cloudfront
+          Vue.js/Nuxt.js, Cloudfront
         </div>
         <div class="block-subtitle">
           Frontend
@@ -92,7 +106,7 @@
 
       <div class="block">
         <div class="block-title">
-          Jest, CircleCI
+          Jest, CircleCI, GitHub Actions
         </div>
         <div class="block-subtitle">
           Testing
