Jun 2021 update: add Ansible and Puppeteer, remove CircleCI

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
       <div class="block">
         <div class="block-title">
-          Node.js/Nest.js, Redis, Postgres, AWS
+          Node.js/Nest.js, Postgres, Redis
         </div>
         <div class="block-subtitle">
           Backend
@@ -106,7 +106,16 @@
 
       <div class="block">
         <div class="block-title">
-          Vue.js/Nuxt.js, Cloudfront
+          AWS, Ansible, GitHub Actions
+        </div>
+        <div class="block-subtitle">
+          Operations
+        </div>
+      </div>
+
+      <div class="block">
+        <div class="block-title">
+          Vue.js/Nuxt.js
         </div>
         <div class="block-subtitle">
           Frontend
@@ -115,7 +124,7 @@
 
       <div class="block">
         <div class="block-title">
-          Jest, GitHub Actions, CircleCI
+          Jest, Puppeteer
         </div>
         <div class="block-subtitle">
           Testing
